@@ -1,3 +1,12 @@
+2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* configure.ac:
+	* src/config.h.in:
+	* src/murrine_style.c: (murrine_widget_is_rgba),
+	(murrine_style_draw_box):
+	Added --disable-rgba at the configure,
+	renamed --enable-animationtoleft to --enable-animationrtl
+
 2008-02-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_style.c: (murrine_style_draw_box):
